# Pokedex

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: IPokedexParser.hpp  NlohmannPokedexParser.cpp  NlohmannPokedexParser.hpp  RapidJsonPokedexParser.cpp  RapidJsonPokedexParser.hpp  main.cpp
